--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,5 @@
     <string name="rMobile">Telefon +355/</string>
     <string name="forget">Keni harruar fjalekalimin?</string>
     <string name="hyr">Hyr ne sistem</string>
-    <string name="app_name2">ProfileActivity</string>
+    <string name="app_name2">Profili</string>
 </resources>
