Update activity+_register.xml and strings.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="forget">Keni harruar fjalekalimin?</string>
     <string name="hyr">Hyr ne sistem</string>
     <string name="app_name2">Profili</string>
+    <string name="retype">Rishkruaj fjalekalimin</string>
 </resources>
