--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="hyr">Hyr ne sistem</string>
     <string name="app_name2">Profili</string>
     <string name="retype">Rishkruaj fjalekalimin</string>
+    <string name="text">HI!</string>
 </resources>
